<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jeza: Food &amp; diabetes tracker</string>
    <string name="error_unknown">Unknown error</string>
    <string name="welcome_text">Hello! Let\'s find out more about you :)</string>
    <string name="lets_go">Let\'s go</string>
    <string name="whats_your_gender">What is your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="whats_your_age">What\'s your age?</string>
    <string name="next">Next</string>
    <string name="whats_your_height">What\'s your height?</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="error_age_cant_be_empty">The age can\'t be empty</string>
    <string name="error_height_cant_be_empty">The height can\'t be empty</string>
    <string name="error_weight_cant_be_empty">The weight can\'t be empty</string>
    <string name="kcal">kcal</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>
    <string name="next_week">Next week</string>
    <string name="previous_week">Previous week</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="nutrient_info">%dg • %dkcal</string>
    <string name="amount_info">%dg</string>
    <string name="grams">g</string>
    <string name="extend">Extend</string>
    <string name="collapse">Collapse</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="brunch">Brunch</string>
    <string name="dinner">Dinner</string>
    <string name="supper">Supper</string>
    <string name="snacks">Snacks</string>
    <string name="add_meal">Add %s</string>
    <string name="add">Add</string>
    <string name="search">Type here to search</string>
    <string name="today">Today</string>
    <string name="recent">Recent</string>
    <string name="kcal_per_100g">%dkcal / 100g</string>
    <string name="track">Track</string>
    <string name="error_something_went_wrong">Oops, something went wrong!</string>
    <string name="no_results">No results</string>
    <string name="error_invalid_values">These are not valid values</string>
    <string name="what_are_your_nutrient_goals">What are your nutrient goals?</string>
    <string name="percent_proteins">% proteins</string>
    <string name="percent_fats">% fats</string>
    <string name="percent_carbs">% carbs</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="years">years</string>
    <string name="whats_your_weight">What\'s your weight?</string>
    <string name="low">Low</string>
    <string name="gain">Gain</string>
    <string name="keep">Keep</string>
    <string name="lose">Lose</string>
    <string name="lose_keep_or_gain_weight">Do you want to lose, keep or gain weight?</string>
    <string name="whats_your_activity_level">What\'s your activity level?</string>
    <string name="error_not_100_percent">The values must add up to 100%</string>
    <string name="your_goal">Your goal</string>
    <string name="delete">Delete</string>
    <string name="developed_by">Developed by Vladislav Voitov</string>
    <string name="contacts">Сontacts: dobrihlopez@gmail.com</string>
    <string name="app_version">Version: %s</string>
    <string name="belarus">Belarus</string>
    <string name="ukraine">Ukraine</string>
    <string name="poland">Poland</string>
    <string name="germany">Germany</string>
    <string name="uk">United Kingdom</string>
    <string name="russia">Russia</string>
    <string name="usa">United states</string>
    <string name="world">Our Earth</string>
    <string name="country">Country</string>
    <string name="search_settings">Search settings</string>
    <string name="do_you_want_go_back">Do you want to return back?</string>
    <string name="restore">restore</string>
    <string name="section_search_action">Do you want to navigate there?</string>
    <string name="section_custom_food_manager_decsription">Create your own food and use it when composing meals</string>
    <string name="section_custom_food_manager_action">Do you want to navigate there?</string>
    <string name="section_search_description">Pick existent food</string>
    <string name="enter_the_product_name">Enter the product name</string>
    <string name="enter_the_amount_of_carbs_in_100g">Enter the amount of carbs in 100g</string>
    <string name="enter_the_amount_of_fat_in_100g">Enter the amount of fat in 100g</string>
    <string name="enter_the_amount_of_protein_in_100g">Enter the amount of protein in 100g</string>
    <string name="save">Save</string>
    <string name="section_local">Local</string>
    <string name="section_internet">Internet</string>
    <string name="content_description_add_photo">Add a photo</string>
    <string name="content_description_some_food">Some food</string>
    <string name="you_should_set_image">You should set an image</string>
    <string name="content_description_close">Close</string>
    <string name="content_description_do_reonboarding">Do re-onboarding</string>
    <string name="content_description_take_look_at_explanations">See explanations</string>
    <string name="options">Options</string>
    <string name="okay">Okay</string>
    <string name="content_description_delete_food_item">Delete food item</string>
    <string name="content_description_search_menu">Search settings menu</string>
    <string name="take_time">Okay</string>
    <string name="cancel_time">Cancel</string>
    <string name="select_time">Select time</string>
    <string name="for_linking_privacy_policy">privacy policy</string>
    <string name="privacy_text">By clicking the button you agree to the %s</string>
    <string name="refresh">refresh card</string>
    <string name="avg_data_during_observing_period">calculated avg</string>
    <string name="exceeding">no-go zone</string>
</resources>