...
                    .background(MaterialTheme.colors.surface)
                    .clip(RoundedCornerShape(5.dp))
                    .fillMaxWidth()
                    .padding(spacing.spaceMedium)
                    .padding(end = spacing.spaceSmall)
                    .onFocusChanged { onFocusChange(it) }
                    .testTag("searchbar_textfield"),
                // to let text not overlap the search icon
                value = text,
                onValueChange = onValueChange,
                maxLines = maxLines,
                keyboardOptions = KeyboardOptions(imeAction = ImeAction.Search),
                keyboardActions = KeyboardActions(onSearch = {
...
