...
                        OutlinedButton(
                            shape = MaterialTheme.shapes.large,
                            modifier = Modifier.fillMaxWidth(),
                            onClick = onActionClick
                        ) {
                            Text(
                                text = "Go",
                                style = MaterialTheme.typography.button,
                            )
                        }
                    }
                }
            }
...
